# GPR5204_919

./: .gitignore  CMakeLists.txt  vcpkg.json
bench/: bench_cache.cpp  bench_dot.cpp  bench_magnitude.cpp  bench_planet.cpp  bench_vector_vs_list.cpp
include/: bench_utils.h  instrinsics.h  matrix4.h  planet.h  vector3.h  vector4.h  vectorize.h
src/: bench_utils.cpp  matrix4.cpp  planet.cpp  vector3.cpp  vectorize.cpp
test/: test_matrix4.cpp
